// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error prompt component Renders correctly with action 1`] = `
<div>
  <div
    class="p-4 border border-coreUI-border bg-white"
  >
    <div
      class="text-center text-base leading-6"
    >
      Ein Fehler ist aufgetreten
    </div>
    <div
      class="mt-4 flex justify-center"
    >
      <button
        class="inline-flex items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
        data-testid="button-prompt"
        role="button"
      >
        Erneut versuchen
      </button>
    </div>
  </div>
</div>
`;

exports[`Error prompt component Renders correctly without action 1`] = `
<div>
  <div
    class="p-4 border border-coreUI-border bg-white"
  >
    <div
      class="text-center text-base leading-6"
    >
      Ein Fehler ist aufgetreten
    </div>
  </div>
</div>
`;
